--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,9 @@
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name %>
-  <%= f.button :submit, class: "btn btn-primary" %>
-<% end %>
+<div class="card shadow-sm bg-white m-3">
+  <div class="container">
+    <h2 class="m-3">Add list</h2>
+    <%= simple_form_for @list do |f| %>
+      <%= f.input :name %>
+      <%= f.button :submit, class: "btn btn-primary mb-3" %>
+    <% end %>
+  </div>
+</div>
